k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: pspd-lab
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
