k8s/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: pspd-lab
spec:
  selector:
    app: service-a
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
    - name: metrics
      port: 9090
      targetPort: 9090
