k8s/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: pspd-lab
spec:
  selector:
    app: service-b
  ports:
    - name: grpc
      port: 50052
      targetPort: 50052
    - name: metrics
      port: 9090
      targetPort: 9090
